--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -3,7 +3,7 @@
 
 <item>
     <shape android:shape="oval">
-        <solid android:color="@color/gris"/>
+        <solid android:color="@color/white"/>
         <!--shadow Color-->
     </shape>
 </item>
@@ -17,7 +17,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="oval">
         <solid
-            android:color="#8BC34A"/>
+            android:color="@color/location"/>
 
         <size
             android:width="40dp"
