--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="blau">#3F51B5</color>
+    <color name="purple_500">#3F51B5</color>
+    <color name="blau">#09144E</color>
     <color name="purple_700">#FF6200EE</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
@@ -11,4 +11,5 @@
     <color name="gris">#EDEDED</color>
     <color name="tronja">#FFC107</color>
     <color name="textos_sec">#8E8E8E</color>
+    <color name="location">#8BC34A</color>
 </resources>
