--- a/app/src/main/res/layout/activity_info_obra.xml
+++ b/app/src/main/res/layout/activity_info_obra.xml
@@ -7,40 +7,33 @@
     tools:context=".Views.DetailObra">
 
     <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/Theme.ATHM2APP.AppBarOverlay">
 
-        <TextView
-            android:id="@+id/titol"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:minHeight="?actionBarSize"
-            android:padding="@dimen/appbar_padding"
-            android:text="@string/app_name"
-            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />
         <TextView
             android:id="@+id/aaa"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:drawableLeft="@drawable/ic_baseline_location_on_24"
-            android:paddingLeft="@dimen/appbar_padding"
+            android:padding="10dp"
+            android:layout_gravity="center"
             android:text="@string/app_name"/>
 
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?attr/colorPrimary" >
+            android:layout_height="wrap_content" >
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/info_tab"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Info" />
+                android:text="Info"
+                />
 
             <com.google.android.material.tabs.TabItem
                 android:id="@+id/visitas_tab"
