--- a/app/src/main/res/layout/fragment_docs.xml
+++ b/app/src/main/res/layout/fragment_docs.xml
@@ -32,6 +32,10 @@
                     android:text="DOCUMENTS"
                     android:textSize="20dp" />
 
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
 
             </LinearLayout>
 
