--- a/app/src/main/res/layout/fragment_visits.xml
+++ b/app/src/main/res/layout/fragment_visits.xml
@@ -11,31 +11,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <androidx.cardview.widget.CardView
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_visites"
             android:layout_width="match_parent"
-            android:layout_height="320dp"
-            android:padding="20dp"
-            android:layout_margin="10dp">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/titol"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:paddingTop="10dp"
-                    android:text="VISITIA 2020-02-2020"
-                    android:textSize="20dp" />
-
-
-
-            </LinearLayout>
-
-        </androidx.cardview.widget.CardView>
-
+            android:layout_height="match_parent" />
     </LinearLayout>
 </FrameLayout>
