--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,9 @@
     <color name="purple_500">#3F51B5</color>
     <color name="blau">#09144E</color>
     <color name="purple_700">#FF6200EE</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="teal_200">#09144E</color>
+    <color name="teal_700">#3F51B5</color>
+    <color name="black">#FFFFFFFF</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gris">#EDEDED</color>
     <color name="tronja">#FFC107</color>
