Implemented FloatingButton funcionallity

--- a/app/src/main/res/layout/activity_add_visit.xml
+++ b/app/src/main/res/layout/activity_add_visit.xml
@@ -17,7 +17,7 @@
             android:padding="20dp">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/titol_obra"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Titol"
