--- a/app/src/main/res/anim/mic_from_click_button.xml
+++ b/app/src/main/res/anim/mic_from_click_button.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <scale
-        android:pivotX="50%"
-        android:pivotY="50%"
-        android:fromYScale="1"
-        android:fromXScale="1"
-        android:toXScale="1"
-        android:toYScale="1"/>
+        android:duration="100"
+        android:interpolator="@android:anim/linear_interpolator"
+        android:fromXScale="1.0"
+        android:fromYScale="1.0"
+        android:fillAfter="true"
+        android:pivotX="100%"
+        android:pivotY="100%"
+        android:toXScale="1.0"
+        android:toYScale="1.0" />
 </set>
